fixed h3 center issue on mobile.

--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ footer hr {
   margin-bottom: 0;
 }
 
-.experience h2, .experience p {
+.experience h2, .experience h3, .experience p {
   text-align: center;
 }
 
@@ -225,7 +225,7 @@ footer hr {
 }
 
 @media screen and (min-width: 40em) {
-  .experience h2, .experience p {
+  .experience h2, .experience h3, .experience p {
     text-align: left;
   }
 }
